# personal-client-portal

./: .gitignore  README.md
backend/: README.md  SETUP.md  env.example  pyproject.toml  test_mongo_connection.py
backend/app/: main.py
backend/app/controllers/: auth_controller.py  client_controller.py  project_controller.py
backend/app/core/: dependencies.py  security.py  settings.py
backend/app/db/: mongo.py
backend/app/models/: client.py  project.py  user.py
backend/app/repositories/: client_repository.py  project_repository.py  user_repository.py
backend/app/routes/: __init__.py  auth.py  client.py  health.py  project.py
backend/app/schema/: auth.py  client.py  project.py
backend/app/services/: auth_service.py  client_service.py  project_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: clients.html  index.html  login.html  projects.html
frontend/public/assets/: clients.js  login.js  main.css  projects.js
